[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repprobe"
version = "0.1.0"
description = "General-purpose linear representation probe factory for HuggingFace-compatible LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "KingTechnician" }
]
keywords = ["nlp", "probing", "representations", "llm", "lda", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.65.0",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
repprobe = "repprobe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repprobe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
